# Game

./: CMakeLists.txt
cmake/: Findglfw3.cmake
include/glad/: glad.h
src/: fragmentShader.frag  glad.c  main.cpp
